fix nav mobile bug causing overflow

--- a/assets/sass/partials/_nav.scss
+++ b/assets/sass/partials/_nav.scss
@@ -25,7 +25,12 @@
 }
 
 .site-nav {
-    
+    width:0px;
+
+    @media screen and (min-width: 980px) {
+        width:auto;
+    }
+
     > ul {
         order:2;
         width:0;
